// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day should render correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render disabled correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 0.5;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 0.5;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 2`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: 0;
  right: initial;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0e0e17;
  width: 40px;
  padding: 0 4px;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: 0;
  right: initial;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 1px solid #93a5c5;
  border-radius: 100%;
  width: 39px;
  height: 39px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #d4e4ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
